# isamples_inabox

./: .gitignore  .gitmodules  README.md  logging.conf  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python-integration-test.yaml  python-integration-test.yml
UI_Preview/: AdobeXD Link_WireFrame  Preview.html  Records_Script.js  Records_Styles.css  Records_View.html  SignUp.html  about.html  index.html  login.html  script.js  server.js  styles.css
UI_Preview/CSS/: Preview_styles.css  Records_Styles.css  login_styles.css
UI_Preview/UI Design/: High_fidelity Prototype Ver 0.0.1  High_fidelity Prototype Ver 0.0.2  High_fidelity Prototype Ver 0.0.3  High_fidelity Prototype Ver 0.0.4
UI_Preview/js/: Preview_script.js  Records_Script.js
doc/: examine_sesar.ipynb
docs/: SOLR_Performance_Testing.md  analytics.md  authentication_and_identifiers.md  aws.md  classification_models_for_metadata.md  gpu_enabled_container_on_aws.md  indexing_integration_test.md
etc/: isb_web.service  isb_web.socket  nginx.conf
integration_tests/: opencontext_material_test_records.json  opencontext_specimen_test_records.json  sesar_material_test_records.json  test_isb_web.py  test_model_values.json  test_sitemaps.py  test_solr_search_results.py
isamples_metadata/: GEOMETransformer.py  OpenContextTransformer.py  SESARTransformer.py  SmithsonianTransformer.py  Transformer.py  isamplesfasttext.py  metadata_exceptions.py
isamples_metadata/taxonomy/: Model.py  OpenContextClassifierInput.py  SESARClassifierInput.py  (+1 more)
isb_lib/: __init__.py  core.py  geome_adapter.py  opencontext_adapter.py  sesar_adapter.py  sesar_adaptor.py  smithsonian_adapter.py
isb_web/: analytics.py  api_types.py  config.py  crud.py  database.py  debug.py  isb_enums.py  isb_format.py  isb_solr_query.py  main.py  manage.py  profiles.py  schemas.py  sqlmodel_database.py
metadata_models/: OPENCONTEXT_material_config.json
notes/: solr_manage.ipynb  solr_manage_isb_core_records.ipynb
scripts/: consume_sitemaps.py  create_sitemaps_symlink.py  create_sql_lite_dump.py  create_text_dump_of_source_data.py  find_missing_sesar_records.py  generate_things_sitemap.py  geome_things.py  isb_things.py  opencontext_things.py  populate_solr_latlon_fields.py  preprocess_smithsonian.py  select_ids_from_smithsonian.py  sesar_indexing_test_records.json  sesar_things.py  smithsonian_things.py  solr_reindex_template.py  update_identifiers_for_existing_things.py  update_opencontext_solr_id.py  update_opencontext_to_lastupdated.py  update_sesar_solr_id.py  update_smithsonian_ids.py  update_smithsonian_last_mod.py
solr_schema_init/: create_isb_core_schema.py
tests/: .coveragerc  README.md  isb_web_config.env  test_analytics.py  test_category_mapping.py  test_core.py  test_csv_import.py  test_datacite.py  test_dynamically_import_modules.py  test_fastapi_apps.py  test_fastapi_sqlmodel.py  test_geome_permit_parsing.py  test_isamples_frictionless.py  test_isamples_metadata.py  test_isb_lib.py  test_metadata_models.py  test_noidy.py  test_orcid.py  test_profiles.py  test_sesar.py  test_sitemap_fetcher.py  test_sitemaps.py  test_smithsonian.py  test_sqlmodel_database.py  test_stac.py  test_things.py  test_url_utilities.py  test_utils.py
(+99 files in other folders)
