[tool.poetry]
name = "isamples_inabox"
version = "0.5.1"
description = "Python implementation of iSamples-in-a-box components"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "Apache 2.0"
packages = [
    { include = "isb_lib"},
    { include = "isb_web"},
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
click-config-file = "^0.6.0"
fastapi = "^0.65.1"
uvicorn = {extras=["standard"], version="^0.13.4"}
aiofiles = "^0.6.0"
igsn-lib = {git = "https://github.com/isamplesorg/igsn_lib.git", rev = "main"}
python-dotenv = "^0.19.0"
networkx = "^2.5.1"
fastapi-cache2 = "^0.1.3"
accept-types = "^0.4.1"
isamples_metadata = {git = "https://github.com/isamplesorg/metadata.git", branch = "develop"}
shapely = "^1.7.1"
geojson = "^2.5.0"
Jinja2 = "^3.0.1"
heartrate = "^0.2.1"

# shouldn't be needed but poetry is having difficulty here
pandas = "1.2.5"

sqlmodel = "^0.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
jupyter = "^1.0.0"
nbterm = "^0.0.7"
heartrate = "^0.2.1"

[tool.poetry.scripts]
sesar_things = "scripts.sesar_things:main"
geome_things = "scripts.geome_things:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
