[tool.poetry]
name = "isamples_inabox"
version = "0.5.1"
description = "Python implementation of iSamples-in-a-box components"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "Apache 2.0"
packages = [
    { include = "isb_lib"},
    { include = "isb_web"},
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
click-config-file = "^0.6.0"
fastapi = "^0.65.1"
uvicorn = {extras=["standard"], version="^0.13.4"}
aiofiles = "^0.6.0"
igsn-lib = {git = "https://github.com/isamplesorg/igsn_lib.git", rev = "main"}
accept-types = "^0.4.1"
shapely = "^1.7.1"
geojson = "^2.5.0"
Jinja2 = "3.0.3"
heartrate = "^0.2.1"
aiofile = "^3.7.2"

sqlmodel = "^0.0.4"
Authlib = "^1.0.1"
itsdangerous = "^2.1.2"
starlette-oauth2-api = "^0.2.6"
httpx = "^0.20.0"

fasttext = "^0.9.2"  # for window users,  use fasttext-wheel = "^0.9.2"
regex = "2022.3.2"
h3 = "^3.7.4"
aiodns = "3.0.0"
aiohttp = "3.8.1"
rdflib = "^6.0.0"

torchvision = "^0.2.2"
transformers = "^4.20.1"

connegp = "0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
jupyter = "^1.0.0"
nbterm = "^0.0.7"
heartrate = "^0.2.1"
flake8 = "^4.0.1"
pipdeptree = "2.2.1"

[tool.poetry.scripts]
sesar_things = "scripts.sesar_things:main"
geome_things = "scripts.geome_things:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
